
2012-12-18  Chueon Park (Hermet)

	* Let image update right now if the image preloading is disabled.

2012-12-21  Stefan Schmidt

	* Fix small memory leak in elm_map error path.

2012-12-29  Mike Blumenkrantz

        * Tooltips now correctly set NETWM tooltip window type

2013-01-13  Daniel Juyung Seo (SeoZ)

        * Added "highlighted" and "unhighlighted" signals to list, genlist, and gengrid.

2013-01-19  WooHyun Jung

        * When string in entry is changed, access to sd should be forbidden after smart_callback_call is called.

2013-01-26  ChanWook Jung (jchanwook@gmail.com)

        * Expand elm_transit tween_mode and add twee_mode_factor_set(),get() APIs

2013-01-29  ChunEon Park (Hermet)

        * Fix a elm_transit crash issue when user delete all target objects in the effect end callback.

2013-01-29  Jaehwan Kim

        * Fix the scroll position is calculated by the size of pan object, not the size of scroller.

2013-02-05  ChunEon Park (Hermet)

        * Index supports "language,changed" smart callback.

2013-03-04  WooHyun Jung

        * Focus highlight should not be showed on (0, 0).

2013-03-04  Junki Cho

        * Improved gengrid item append performance.

2013-03-05 Jiyoun Park

        * Fix elm_conform didn't set size hint when keypad on.

2013-03-05  Jaehwan Kim

        * Add edje_object_message_signal_process before edje_object_size_min_restricted_calc.
        If the min size is changed by edje signal in edc, the the function should be called before the calculation.

2013-03-05 Jiyoun Park

        * Fix elm_conform didn't change indicator mode when create.

2013-03-06  ChunEon Park (Hermet)

        * Add elm_object_item_signal_callback_add(), elm_object_item_signal_callback_del().

2013-03-07  Jaehwan Kim

        * Add the config ELM_THUMBSCROLL_HOLD_THRESHOLD.
        This is the number of pixels the range which can be scrolled, while the scroller is holed.