@@ -811,3 +811,9 @@
 
         * Add the config ELM_THUMBSCROLL_HOLD_THRESHOLD.
         This is the number of pixels the range which can be scrolled, while the scroller is holed.
+
+2013-03-19  Jaehwan Kim
+
+        * Fix the elm_shutdown bug in _elm_shutdown_config.
+        When the elm_shutdown is used after elm_config_all_flush, the segment fault occur.
+        It's why it uses ecore_x in _prop_all_update_cb after removing it.
